--- a/rootdir/etc/init.courbet.rc
+++ b/rootdir/etc/init.courbet.rc
@@ -7,3 +7,9 @@ service vendor.nfc_hal_service /vendor/bin/hw/android.hardware.nfc@1.2-service
     user nfc
     group nfc
     disabled
+
+service citsensor-hal-1-1  /vendor/bin/hw/vendor.xiaomi.hardware.citsensorservice@1.1-service
+    override
+    class late_start
+    user system
+    group system input wakelock
